# WeatherTunes

./: .gitignore  .pdm-python  README.md  pyproject.toml
dags/: data_songs.py  data_weather.py  data_weather_b.py  meta.py  raw_weather.py  recommendations.py
features/data_audio_features/: retry_failures.py  run.sh
features/data_songs/: a.py  b.py  batch_run.py  data_song200.py  data_song200_run.sh  failures.csv  failures_backup.csv  mock.py  retry_failures.py  run.sh  vm.py
features/data_weather/: a.py  run.sh  test_local.py
features/meta/: a.py  run.sh
features/raw_songs/: cookies_raw_songs.py  playwright_spotify.py  retry_fail_spotify.sh  run_spotify_playwright.sh  spotify_gcs_job.py  spotify_gs.py  testcsv.py
features/raw_weather/: a.py  run.sh
features/recommendations/: a.py  discord.py  run.sh
features/test/: data_weather_test.sh
features/test/test_weather_txt/: weather_202504010000_stn108.txt  weather_202504011200_stn108.txt  weather_202504020600_stn108.txt  weather_202504021800_stn108.txt
